Gaim: The Pimpin' Penguin IM Clone thats good for the soul! 

version 0.52:
	* Better buddy icon transparency (thanks SeanEgan)
	* Updated Polish Translation (thanks Przemyslaw Sulek)
	* Fixed a little bug with connecting via proxy (thanks
	  for reminding me of this, Manish Singh)
	* Updated Simplified Chinese Translation (Thanks Rocky S. Lee)
	* Updated German Translation (Thanks Karsten Weiss)

version 0.51 (01/24/2002):
	* Arrow buttons in log viewer and some other dialogs
	  work (thanks Ben Miller)
	* Option to only send auto-response while idle (thanks
	  Sean Egan)
	* Control time between sending auto-responses (thanks
	  Mark Doliner)
	* Should be able to sign on to Oscar using Mac OS X
	  (thanks Fingolfin, Vincas Ciziunas, et al.)
	* Finnish translation added (Thanks Tero Kuusela)
	* Updated French Translation (Thanks sebfrance)

version 0.50 (12/14/2001):
	* Updated polish translation (Thanks Przemyslaw Sulek)
	* Able to import GnomeICU contact lists
	* Galeon as browser option (Thanks Rob McQueen)
	* IRC /list, /invite (Thanks Sean Egan)
	* Added swedish translation (Thanks Christian Rose)
	* Option to have IMs and Chats tabbed in same window
	* Finally put the lagmeter plugin out of its misery and
	  removed it. (/me dances on its grave.)

version 0.49 (11/29/2001):
	* Can compile against GTK+ 2.0 (version 1.3.10/1.3.11)
	* Confirm before removing buddies
	* Updated Russian translation (thanks Grigory Bakunov)
	* Updated Korean translation (thanks Ho-seok Lee, also for
	  resized ICQ icons)
	* Updated Dutch translation (thanks Floris Eshuis)
	* Yahoo updates (thanks Brian Macke)
	* Jabber updates
	* Zephyr updates (thanks Arun A Tharuvai)
	* Gadu-Gadu updates (thanks Arkadiusz Miskiewicz)
	* Option to show aliases in conversation tabs
	* Option to hide windows after sending messages
	* licq2gaim.pl conversion script (thanks Arturo Cisneros, Jr.)

version 0.48 (11/18/2001):
	* Right-click on links to open/copy URL
	* Yahoo changes